# django-querycount

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  HISTORY.md  HISTORY.rst  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
docs/: index.html
docs/_src/: conf.py  configuration.md  installation.md  license.md  testing.md
docs/doctrees/: configuration.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  testing.doctree
docs/html/: .buildinfo  configuration.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  testing.html
docs/html/_sources/: contributing.md.txt  index.md.txt  index.rst.txt
querycount/: __init__.py  middleware.py  qc_settings.py
querycount/tests/: test.py  urls.py  views.py
querycount/tests/test_app/: models.py  settings.py
